test/conformance/chainsaw/validate/clusterpolicy/standard/cel/disallow-host-port/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - hostPort: 80
