test/conformance/chainsaw/validate/clusterpolicy/standard/cel/disallow-host-port/02-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      file: pod-pass.yaml
  - apply:
      check:
        ($error != null): true
      file: pod-fail.yaml
