test/conformance/chainsaw/validate/clusterpolicy/standard/cel/disallow-host-port/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-port
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: disallow-host-port
  - name: step-02
    try:
    - apply:
        file: pod-pass.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-fail.yaml
